--- a/app/partials/example.html
+++ b/app/partials/example.html
@@ -1,38 +1,84 @@
 <div class="clearfix"></div>
 
 <div class="home-text top-slide lightbg">
-  <img src="/static/bookstack.jpg" style="float: right; margin-top: 50px">
-  <div>
-    <h1>usedbookscraper</h1>
-    <h4>buy a stack of books for a couple bucks each</h4>
-    <div style="margin-top: 50px; margin-left: 100px">
-      <a href="#start" class="btn btn-large btn-primary">start search &gt;&gt;</a>
-    </div>
-    <div style="margin-top: 20px; margin-left: 100px">
-      or <a href="#">see an example search...</a>
-    </div>
-  </div>
-
-  <div class="clearfix"></div>
+  hello
 </div>
 
 <div class="home-text mid-slide darkbg">
-  <div ng-include="'partials/half-shipping-table.html'"
-    style="float: right; margin-left: 50px">
-  </div>
-  <div>
-    <b>how it works:</b>
-    <ol>
-      <li>get your <b>reading list</b> from goodreads.com or enter isbns directly</li>
-      <li>select <b>5 &ndash; 25 books</b> for the search</li>
-      <li>tweak options to prioritize certain books, pick specific editions, and set max price and minimum acceptable book condition</li>
-      <li>usedbookscraper <b>searches half.com</b> and shows you results grouped by seller</li>
-      <li><b>buy a stack of books</b> from <b>one seller</b> and get cheap shipping</li>
-    </ol>
-  </div>
-  <div class="clearfix"></div>
+  hello
 </div>
 
-<div class="home-text bot-slide lightbg">
+<div class="home-text mid-slide lightbg">
+  <img src="/static/example/step_start.png" class="example">
+  <p class="example-text">
+    Some explanatory text goes here.  Some explanatory text goes here.  Some 
+    explanatory text goes here.  Some explanatory text goes here.  Some 
+    explanatory text goes here. 
+  </p>
+</div>
+
+<div class="home-text mid-slide darkbg">
+  <img src="/static/example/step_shelves.png" class="example">
+  <p class="example-text">
+    Some explanatory text goes here.  Some explanatory text goes here.  Some 
+    explanatory text goes here.  Some explanatory text goes here.  Some 
+    explanatory text goes here. 
+  </p>
+</div>
+
+<div class="home-text mid-slide lightbg">
+  <img src="/static/example/step_shelves_coffeetable_low.png" class="example">
+</div>
+
+<div class="home-text mid-slide darkbg">
+  <img src="/static/example/advanced_options_shelves.png" class="example" style="width: 472px">
+</div>
+
+<div class="home-text mid-slide lightbg">
+  <img src="/static/example/step_books.png" class="example">
+</div>
+
+<div class="home-text mid-slide darkbg">
+  <img src="/static/example/advanced_options_books.png" class="example">
+</div>
+
+<div class="home-text mid-slide lightbg">
+  <img src="/static/example/advanced_options_books_full.png" class="example">
+</div>
+
+<div class="home-text mid-slide darkbg">
+  <img src="/static/example/advanced_options_books_pynchon_musthave.png" class="example">
+</div>
+
+<div class="home-text mid-slide lightbg">
+  <img src="/static/example/step_editions.png" class="example">
+</div>
+
+<div class="home-text mid-slide darkbg">
+  <img src="/static/example/step_editions_alice_tenniel.png" class="example">
+</div>
+
+<div class="home-text mid-slide lightbg">
+  <img src="/static/example/step_listings.png" class="example">
+</div>
+
+<div class="home-text mid-slide darkbg">
+  <img src="/static/example/step_listings_progress_only.png" class="example">
+</div>
+
+<div class="home-text mid-slide lightbg">
+  <img src="/static/example/step_results_heading.png" class="example">
+</div>
+
+<div class="home-text mid-slide darkbg">
+  <img src="/static/example/step_results_free_state.png" class="example">
+</div>
+
+<div class="home-text mid-slide lightbg">
+  <img src="/static/example/step_results_yankee_clipper.png" class="example">
+</div>
+
+
+<div class="home-text bot-slide darkbg">
   The quick brown fox jumped over the lazy dog.
 </div>
