Add explicit css class for hero img on home page

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -67,7 +67,7 @@ body {
 .home-text.top-slide {
   border-radius: 6px 6px 0 0;
 }
-.home-text.top-slide img {
+.home-hero-img {
   border: 2px #333 solid;
   border-radius: 4px;
 }
