--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,7 +1,7 @@
 <div class="clearfix"></div>
 
 <div class="home-text top-slide lightbg">
-  <img src="/static/bookstack.jpg" style="float: right; margin-top: 50px">
+  <img src="/static/bookstack.jpg" class="home-hero-img" style="float: right; margin-top: 50px">
   <div>
     <h1>usedbookscraper</h1>
     <h4>buy a stack of books for a couple bucks each</h4>
