Add giphy link to thanks section

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -41,7 +41,8 @@
     <a href="http://www.sinatrarb.com/" target="_blank">sinatra</a> &bull;
     <a href="http://developer.ebay.com/DevZone/half-finding/Concepts/HalfFindingAPIGuide.html" target="_blank">half.com api</a> &bull;
     <a href="https://www.goodreads.com/api" target="_blank">goodreads api</a> &bull;
-    <a href="http://xisbn.worldcat.org/xisbnadmin/doc/api.htm" target="_blank">xisbn api</a>
+    <a href="http://xisbn.worldcat.org/xisbnadmin/doc/api.htm" target="_blank">xisbn api</a> &bull;
+    <a href="http://giphy.com" target="_blank">giphy</a>
   </p>
 
 </div>
