Activate home page link to example

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -9,7 +9,7 @@
       <a href="#start" class="btn btn-large btn-primary">start search &gt;&gt;</a>
     </div>
     <div style="margin-top: 20px; margin-left: 100px">
-      or <a href="#">see an example search...</a>
+      or <a href="#example">see an example search...</a>
     </div>
   </div>
 
