--- a/app/css/app.css
+++ b/app/css/app.css
@@ -117,14 +117,24 @@ img.example {
   max-width: 60%;
   height: auto;
 }
-p.example-text {
+div.example {
+  display: inline-block;
+  border: 1px #999 dotted;
+  border-radius: 4px;
+  width: auto;
+}
+div.example > img {
+  /*max-width: 60%;*/
+  /*height: auto;*/
+}
+div.example-text {
   display: inline-block;
   overflow: hidden;
   width: 280px;
   margin-left: 10px;
   vertical-align: top;
-  /*text-align: justify;*/
-  float: right;
+  text-align: justify;
+  /*float: right;*/
 }
 
 /*
