Change example page image border style

--- a/app/partials/example.html
+++ b/app/partials/example.html
@@ -90,7 +90,7 @@
 </div>
 
 <div class="home-text bot-slide lightbg">
-  <div class="example" style="padding-bottom: 4px; margin-right: 18px">
+  <div class="example" style="padding-top: 1px; padding-bottom: 4px; margin-right: 18px">
     <img src="/static/example/step_results_heading.png"><br>
     <img src="/static/example/step_results_yankee_clipper.png" width="432">
   </div>
