--- a/app/css/app.css
+++ b/app/css/app.css
@@ -111,14 +111,14 @@ body {
 
 img.example {
   display: inline-block;
-  border: 1px #999 dotted;
+  border: 1px #999 solid;
   border-radius: 4px;
   max-width: 60%;
   height: auto;
 }
 div.example {
   display: inline-block;
-  border: 1px #999 dotted;
+  border: 1px #999 solid;
   border-radius: 4px;
   width: auto;
 }
