Tweak example page content

--- a/app/partials/example.html
+++ b/app/partials/example.html
@@ -17,11 +17,11 @@
   <img src="/static/example/step_shelves_coffeetable_low.png" class="example">
   <div class="example-text">
     <p><code>/me</code> selects two shelves to use for the book search.</p>
-    <p><code>/me</code> does not change the 'defaults' search options, which
-    are used for all books unless overridden.</p>
+    <p><code>/me</code> leaves the 'defaults' search options unchanged.
+    (These are used for all books unless overridden per-shelf or per-book.)</p>
     <p><code>/me</code> clicks 'edit search options' for the 'coffee-table'
-    shelf and sets the desirability to low. (Perhaps 'bathroom-shelf' would be
-    a better name?)</p>
+    shelf and sets the desirability to low. (They will still appear in results,
+    but will only serve as a tiebreaker for ranking of sellers.)</p>
   </div>
 </div>
 
@@ -29,7 +29,7 @@
   <img src="/static/example/advanced_options_books.png" class="example">
   <div class="example-text">
     <p><b>desirability</b>: sellers with must-have and high desirability books
-    will be ranked higher</p>
+    will be ranked higher in the results</p>
     <!--low desirability books will only count as tiebreakers-->
     <p><b>condition</b>: minimum acceptable condition under the
       <a href="http://pages.half.ebay.com/help/buyer/checkout.html#toc-13"
@@ -48,7 +48,8 @@
 <div class="home-text mid-slide lightbg">
   <img src="/static/example/step_books.png" class="example">
   <div class="example-text">
-    <p><code>/me</code> leaves all 14 books selected (not all shown here).</p>
+    <p><code>/me</code> leaves all 14 books selected (screenshot only shows
+    first four).</p>
     <p>(Picking 5 &mdash; 25 well-known and widely-available books is about right
     to get good results without requiring too much time to run the search.)</p>
   </div>
@@ -66,7 +67,7 @@
   <img src="/static/example/step_editions.png" class="example">
   <div class="example-text">
     <p><code>/me</code> looks over alternate ISBNs found for
-    <em>The Brothers Karamazov</em> to ensure that each is an edition of the
+    <em>The Brothers Karamazov</em> to ensure that they are for the
     Pevear & Volokhonsky translation.</p>
   </div>
 </div>
@@ -85,7 +86,7 @@
   <img src="/static/example/step_listings_progress_only.png" class="example" width="276">
   </div>
   <div class="example-text">
-    <p><code>/me</code> twiddles thumbs</p>
+    <p><code>/me</code> twiddles thumbs.</p>
   </div>
 </div>
 
@@ -98,7 +99,7 @@
     <p><code>/me</code> scrolls through the first few sellers and picks one to
     order from.</p>
     <p><code>/me</code> looks at some of the 'more listings' dropdowns to check
-    for newer editions and book listings in better condition.</p>
+    for preferred editions and book listings in better condition.</p>
     <p><code>/me</code> clicks 'Buy Now' for each book, adds each one to the
     half.com shopping cart, and places the order.</p>
     <p><code>/me</code> says 12 books at $2.98 per book ain't bad.</p>
