Add made in brooklyn to about page

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -32,7 +32,7 @@
   </p>
 
   <p class="about-text" style="font-size: 11px; text-align: center; margin-top: 80px">
-  many thanks:
+    many thanks:
     <a href="https://angularjs.org/" target="_blank">angular</a> &bull;
     <a href="http://getbootstrap.com/2.3.2/" target="_blank">bootstrap</a> &bull;
     <a href="http://lodash.com/" target="_blank">lo-dash</a> &bull;
@@ -43,6 +43,10 @@
     <a href="https://www.goodreads.com/api" target="_blank">goodreads api</a> &bull;
     <a href="http://xisbn.worldcat.org/xisbnadmin/doc/api.htm" target="_blank">xisbn api</a> &bull;
     <a href="http://giphy.com" target="_blank">giphy</a>
+  </p>
+
+  <p class="about-text" style="font-size: 11px; text-align: center; margin-top: 0px">
+    made in brooklyn
   </p>
 
 </div>
