Tweak about page content

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -5,19 +5,18 @@
   <img class="about-image pull-right" width="250" src="/static/headshot.jpg">
 
   <p class="about-text">
-    <b>usedbookscraper</b> was born for two reasons:
-    <ol>
-      <li>a long list of books I wanted to read</li>
-      <li>the condition of broke-ness that tends to accompany encounters with institutions of higher education</li>
-    </ol>
+    <b>usedbookscraper</b> was born when I noticed that half.com has cheap
+    shipping if you order multiple books from the same seller.
   </p>
 
   <p class="about-text">
-    (a contributing factor was the deliciousness of used books in general
-    &mdash; the smells,
-    the marginalia from bookworms and distressed students,
-    the business cards and horse track picks and plane tickets as bookmarks,
-    <em style="white-space: nowrap">et cetera</em>)
+    At the time I had accumulated a far-too-long list of books I wanted to
+    read, and was too broke to be buying piles of new books due to the side
+    effects of higher education.
+  </p>
+
+  <p class="about-text">
+    So here it is, a couple years later, all polished up.
   </p>
 
   <p class="about-text" style="text-align: center; margin-top: 80px">
