Tweaks to text content

--- a/app/bookscrapersession/partials/listings.html
+++ b/app/bookscrapersession/partials/listings.html
@@ -17,8 +17,7 @@
 <div giphy-embed></div>
 
 <p class="muted listings-wait-note" style="">
-(be patient, you're making hundreds of requests to the half.com api right now
-&mdash; they're unfortunately not set up to
+(be patient, the half.com api is unfortunately not set up to
 <a href="http://en.wikipedia.org/wiki/Cross-origin_resource_sharing" target="_blank">accept requests directly</a>
 so everything has to go through my underpowered host &mdash; if you're
 seeing errors or timeouts <a href="#about" target="_blank">drop me a message</a> and try again later)
