--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -5,7 +5,7 @@
   <img class="about-image pull-right" width="250" src="/static/headshot.jpg">
 
   <p class="about-text">
-    <b>usedbookscraper</b> was born when I noticed that half.com has cheap
+    <b>usedbookscraper</b> was born when I discovered that half.com has cheap
     shipping if you order multiple books from the same seller.
   </p>
 
