--- a/app/partials/example.html
+++ b/app/partials/example.html
@@ -37,8 +37,7 @@
         half.com guidelines
       </a>
     </p>
-    <p><b>max price</b>: max acceptable cost to add the book to the order
-    (including shipping cost)</p>
+    <p><b>max price</b>: max acceptable book price (excludes shipping cost)</p>
     <p><b>exclude library</b>: attempt to exclude ex&#8209;library books</p>
     <p><b>exclude cliff's notes</b>: attempt to exclude Cliff's Notes
     (which in rare cases may be miscategorized under the ISBN of the real book)</p>
