Add google analytics events

--- a/app/bookscrapersession/partials/seller_books.html
+++ b/app/bookscrapersession/partials/seller_books.html
@@ -49,6 +49,7 @@
         </td>
         <td class="text-right">
           <a href="{{sbook.bestListing.half_item_url}}" target="_blank"
+              ng-click="handleBuyNowClick()"
               class="btn btn-primary" style="white-space: nowrap">
             buy now >></a>
         </td>
