Tweak example page text content

--- a/app/partials/example.html
+++ b/app/partials/example.html
@@ -65,18 +65,17 @@
 <div class="home-text mid-slide lightbg">
   <img src="/static/example/step_editions.png" class="example">
   <div class="example-text">
-    <p><code>/me</code> looks over alternate ISBNs found for
+    <p><code>/me</code> reviews the alternate editions found for
     <em>The Brothers Karamazov</em> to ensure that they are for the
-    Pevear & Volokhonsky translation.</p>
+    Pevear &amp; Volokhonsky translation.</p>
   </div>
 </div>
 
 <div class="home-text mid-slide lightbg">
   <img src="/static/example/step_editions_alice_tenniel.png" class="example">
   <div class="example-text">
-    <p><code>/me</code> looks over alternates found for
-    <em>Alice's Adventures</em> and deselects any that don't explicitly mention
-    the Tenniel illustrations.</p>
+    <p><code>/me</code> selects editions of <em>Alice's Adventures</em> which
+    have the the Tenniel illustrations.</p>
   </div>
 </div>
 
