Tweak about page content

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -5,18 +5,24 @@
   <img class="about-image pull-right" width="250" src="/static/headshot.jpg">
 
   <p class="about-text">
-    <b>usedbookscraper</b> was born when I discovered that half.com has cheap
-    shipping if you order multiple books from the same seller.
+    <b>usedbookscraper</b> is an all-polished-up version of a script I created
+    way back when I first discovered that shipping is cheap on half.com if you
+    order multiple books from the same seller.
   </p>
 
   <p class="about-text">
-    At the time I had accumulated a far-too-long list of books I wanted to
-    read, and was too broke to be buying piles of new books due to the side
-    effects of higher education.
+    I love used books &mdash; they smell nice and sometimes they come with
+    imagination-provoking hints about past readers.
+    Notes in the margins. Heartfelt inscriptions.
+    Plane ticket bookmarks. Horse track picks.
   </p>
 
   <p class="about-text">
-    So here it is, a couple years later, all polished up.
+    Most surprising find? A copy of Arthur C. Clarke's
+    <em>How the World Was One</em> with cutouts every few pages from
+    mens' magazine advertisements and mid-90s celebrity tabloids.
+    I'm not sure what to infer about the responsible party.
+    Used books are fun.
   </p>
 
   <p class="about-text" style="text-align: center; margin-top: 80px">
