Tweak about page content

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -15,14 +15,7 @@
     imagination-provoking hints about past readers.
     Notes in the margins. Heartfelt inscriptions.
     Plane ticket bookmarks. Horse track picks.
-  </p>
-
-  <p class="about-text">
-    Most surprising find? A copy of Arthur C. Clarke's
-    <em>How the World Was One</em> with cutouts every few pages from
-    mens' magazine advertisements and mid-90s celebrity tabloids.
-    I'm not sure what to infer about the responsible party.
-    Used books are fun.
+    Cutouts of celebrities from mid&#8209;90s tabloids. Makes you wonder...
   </p>
 
   <p class="about-text" style="text-align: center; margin-top: 80px">
