Tweak about page content

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -11,7 +11,7 @@
   </p>
 
   <p class="about-text">
-    I love used books &mdash; they smell nice and sometimes they come with
+    Used books are great &mdash; they smell nice and sometimes they come with
     imagination-provoking hints about past readers.
     Notes in the margins. Heartfelt inscriptions.
     Plane ticket bookmarks. Horse track picks.
