Tweak about page content

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -12,7 +12,7 @@
 
   <p class="about-text">
     Used books are great &mdash; they smell nice and sometimes they come with
-    imagination-provoking hints about past readers.
+    imagination-provoking hints about previous owners.
     Notes in the margins. Heartfelt inscriptions.
     Plane ticket bookmarks. Horse track picks.
     Cutouts of celebrities from mid&#8209;90s tabloids. Makes you wonder...
