Tweak about page content

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -12,10 +12,10 @@
 
   <p class="about-text">
     Used books are great &mdash; they smell nice and sometimes they come with
-    imagination-provoking hints about previous owners.
+    hints of past readers to feed the imagination.
     Notes in the margins. Heartfelt inscriptions.
     Plane ticket bookmarks. Horse track picks.
-    Cutouts of celebrities from mid&#8209;90s tabloids. Makes you wonder...
+    Cutouts of celebrities from mid&#8209;90s tabloids...
   </p>
 
   <p class="about-text" style="text-align: center; margin-top: 80px">
