Tweak about text

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -6,19 +6,23 @@
 
   <p class="about-text">
     <b>usedbookscraper</b> is an all-polished-up version of a script I created
-    way back when I first discovered that shipping is cheap on half.com if you
-    order multiple books from the same seller.
+    way back when I first discovered cheap shipping on half.com.
   </p>
 
   <p class="about-text">
-    Used books are great &mdash; they smell nice and sometimes they come with
-    hints of past readers to feed the imagination.
+    Used books are great! They smell nice and sometimes they come with
+    small hints which make you feel connected to past owners of the book.
     Notes in the margins. Heartfelt inscriptions.
     Plane ticket bookmarks. Horse track picks.
     Cutouts of celebrities from mid&#8209;90s tabloids...
   </p>
 
-  <p class="about-text" style="text-align: center; margin-top: 80px">
+  <p class="about-text">
+    Support your local independent booksellers when you can and give
+    <b>usedbookscraper</b> a try too!
+  </p>
+
+  <p class="about-text" style="text-align: center; margin-top: 60px">
     like <b>usedbookscraper</b>? say hi on
     <a href="https://www.goodreads.com/user/show/32853571-usedbookscraper" target="_blank">goodreads</a>
     or
