Add instructions to book, edition, and listing partials

--- a/app/bookscrapersession/partials/books.html
+++ b/app/bookscrapersession/partials/books.html
@@ -1,6 +1,7 @@
 <div class="inner-content">
 
-<h1>select books</h1><br>
+<h1>select books</h1>
+<h5>pick 5 &mdash; 25 books for your reading list</h5><br>
 
 <div ng-show="loading">
   <img src="/static/spinner.gif"> &nbsp;&nbsp;&nbsp;
