--- a/app/bookscrapersession/partials/editions.html
+++ b/app/bookscrapersession/partials/editions.html
@@ -1,6 +1,7 @@
 <div class="inner-content">
 
-<h1>select editions</h1><br>
+<h1>select editions</h1>
+<h5>pick at most about 20 editions per book</h5><br>
 
 <div ng-show="loading">
   <img src="/static/spinner.gif"> &nbsp;&nbsp;&nbsp;
