--- a/app/bookscrapersession/partials/sellers.html
+++ b/app/bookscrapersession/partials/sellers.html
@@ -1,6 +1,7 @@
 <div class="inner-content" style="max-width: 760px">
 
-<h1>results</h1><br>
+<h1>results</h1>
+<h5>click "buy now" to view each half.com listing and add it to your cart</h5><br>
 
 <div ng-show="!pagedSellers.length">
   <h4>No sellers found.</h4>
