--- a/app/bookscrapersession/partials/sellers.html
+++ b/app/bookscrapersession/partials/sellers.html
@@ -18,4 +18,5 @@
   <div ubs-pager pager-num-pages="pagedSellers.length" 
     pager-per-page="perPage" pager-current-page="currentPage"></div>
 
+  <img style="text-decoration:none;border:0;padding:0;margin:0;" src="http://rover.ebay.com/roverimp/1/8971-56017-19255-0/1?ff3=5&pub=5575092710&toolid=10001&campid=5337535591&customid=&mpt=[CACHEBUSTER]">
 </div>
