Add half.com referral links to seller book listings

--- a/app/bookscrapersession/partials/seller_book_listings.html
+++ b/app/bookscrapersession/partials/seller_book_listings.html
@@ -20,7 +20,7 @@
           ng-value="listing" ng-change="onChange()">
       <small>
         <div>
-          <a href="{{listing.half_item_url}}" target="_blank">
+          <a ng-href="{{buildHalfReferralUrl(listing.half_item_url)}}" target="_blank">
           <b>{{listing.edition.half_title}}</b></a>
         </div>
         <div class="pull-right">{{listing.price | currency}}</div>
