Replace example page \me with font awesome user icon

--- a/app/partials/example.html
+++ b/app/partials/example.html
@@ -1,3 +1,10 @@
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+<style>
+  .fa-user {
+    padding-right: 2px;
+  }
+</style>
+
 <div class="clearfix"></div>
 
 <div class="home-text top-slide lightbg" style="padding-bottom: 0">
@@ -7,7 +14,7 @@
 <div class="home-text mid-slide lightbg">
   <img src="/static/example/step_start.png" class="example">
   <div class="example-text">
-    <p><code>/me</code> pastes Goodreads profile URL.</p>
+    <p><i class="fa fa-user"></i> pastes Goodreads profile URL.</p>
     <p>(Alternatively, enter a list of ISBNs and skip forward to picking
     editions).</p>
   </div>
@@ -16,10 +23,10 @@
 <div class="home-text mid-slide darkbg">
   <img src="/static/example/step_shelves_coffeetable_low.png" class="example">
   <div class="example-text">
-    <p><code>/me</code> selects two shelves to use for the book search.</p>
-    <p><code>/me</code> leaves the 'defaults' search options unchanged.
+    <p><i class="fa fa-user"></i> selects two shelves to use for the book search.</p>
+    <p><i class="fa fa-user"></i> leaves the 'defaults' search options unchanged.
     (These are used for all books unless overridden per-shelf or per-book.)</p>
-    <p><code>/me</code> clicks 'edit search options' for the 'coffee-table'
+    <p><i class="fa fa-user"></i> clicks 'edit search options' for the 'coffee-table'
     shelf and sets the desirability to low. (They will still appear in results,
     but will only serve as a tiebreaker for ranking of sellers.)</p>
   </div>
@@ -47,7 +54,7 @@
 <div class="home-text mid-slide lightbg">
   <img src="/static/example/step_books.png" class="example">
   <div class="example-text">
-    <p><code>/me</code> leaves all 14 books selected (screenshot only shows
+    <p><i class="fa fa-user"></i> leaves all 14 books selected (screenshot only shows
     first four).</p>
     <p>(Picking 5 &mdash; 25 well-known and widely-available books is about right
     to get good results without requiring too much time to run the search.)</p>
@@ -57,7 +64,7 @@
 <div class="home-text mid-slide darkbg">
   <img src="/static/example/advanced_options_books_pynchon_musthave.png" class="example">
   <div class="example-text">
-    <p><code>/me</code> sets <em>Gravity's Rainbow</em> as must-have.</p>
+    <p><i class="fa fa-user"></i> sets <em>Gravity's Rainbow</em> as must-have.</p>
     (This will bring any sellers who carry it to the top of the results.)</p>
   </div>
 </div>
@@ -65,7 +72,7 @@
 <div class="home-text mid-slide lightbg">
   <img src="/static/example/step_editions.png" class="example">
   <div class="example-text">
-    <p><code>/me</code> reviews the alternate editions found for
+    <p><i class="fa fa-user"></i> reviews the alternate editions found for
     <em>The Brothers Karamazov</em> to ensure that they are for the
     Pevear &amp; Volokhonsky translation.</p>
   </div>
@@ -74,7 +81,7 @@
 <div class="home-text mid-slide lightbg">
   <img src="/static/example/step_editions_alice_tenniel.png" class="example">
   <div class="example-text">
-    <p><code>/me</code> selects editions of <em>Alice's Adventures</em> which
+    <p><i class="fa fa-user"></i> selects editions of <em>Alice's Adventures</em> which
     have the the Tenniel illustrations.</p>
   </div>
 </div>
@@ -84,7 +91,7 @@
   <img src="/static/example/step_listings_progress_only.png" class="example" width="276">
   </div>
   <div class="example-text">
-    <p><code>/me</code> twiddles thumbs.</p>
+    <p><i class="fa fa-user"></i> twiddles thumbs.</p>
   </div>
 </div>
 
@@ -94,12 +101,12 @@
     <img src="/static/example/step_results_yankee_clipper.png" width="432">
   </div>
   <div class="example-text">
-    <p><code>/me</code> scrolls through the first few sellers and picks one to
+    <p><i class="fa fa-user"></i> scrolls through the first few sellers and picks one to
     order from.</p>
-    <p><code>/me</code> looks at some of the 'more listings' dropdowns to check
+    <p><i class="fa fa-user"></i> looks at some of the 'more listings' dropdowns to check
     for preferred editions and book listings in better condition.</p>
-    <p><code>/me</code> clicks 'Buy Now' for each book, adds each one to the
+    <p><i class="fa fa-user"></i> clicks 'Buy Now' for each book, adds each one to the
     half.com shopping cart, and places the order.</p>
-    <p><code>/me</code> says 12 books at $2.98 per book ain't bad.</p>
+    <p><i class="fa fa-user"></i> says 12 books at $2.98 per book ain't bad.</p>
   </div>
 </div>
