Move about text to home page

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -16,7 +16,7 @@
   <div class="clearfix"></div>
 </div>
 
-<div class="home-text bot-slide darkbg">
+<div class="home-text mid-slide darkbg">
   <div ng-include="'partials/half-shipping-table.html'"
     style="float: right; margin-left: 50px">
   </div>
@@ -35,4 +35,37 @@
     <img style="text-decoration:none;border:0;padding:0;margin:0;" src="http://rover.ebay.com/roverimp/1/8971-56017-19255-0/1?ff3=5&pub=5575092710&toolid=10001&campid=5337535591&customid=&mpt=[CACHEBUSTER]">
   </div>
   <div class="clearfix"></div>
+</div>
+
+<div class="home-text bot-slide lightbg" style="padding-bottom: 16px">
+  <div>
+    <p class="about-text" style="text-align: center">
+      do you like <b>usedbookscraper</b>?
+      say <a href="https://twitter.com/qqrsmith" target="_blank">hi</a>
+    </p>
+
+    <p class="about-text" style="text-align: center">
+      or send comments and bug reports to <b>usedbookscraper</b> at <b>gmail</b>
+    </p>
+
+    <p class="about-text about-footer-text" style="font-size: 11px; text-align: center; margin-top: 32px">
+      many thanks:
+      <a href="https://angularjs.org/" target="_blank">angular</a> &bull;
+      <a href="http://getbootstrap.com/2.3.2/" target="_blank">bootstrap</a> &bull;
+      <a href="http://lodash.com/" target="_blank">lo-dash</a> &bull;
+      <a href="http://gulpjs.com/" target="_blank">gulp</a> &bull;
+      <a href="https://www.heroku.com/" target="_blank">heroku</a> &bull;
+      <a href="http://www.sinatrarb.com/" target="_blank">sinatra</a> &bull;
+      <a href="http://developer.ebay.com/DevZone/half-finding/Concepts/HalfFindingAPIGuide.html" target="_blank">half.com api</a> &bull;
+      <a href="https://www.goodreads.com/api" target="_blank">goodreads api</a> &bull;
+      <a href="http://xisbn.worldcat.org/xisbnadmin/doc/api.htm" target="_blank">xisbn api</a> &bull;
+      <a href="http://giphy.com" target="_blank">giphy</a>
+    </p>
+
+    <p class="about-text about-footer-text" style="font-size: 11px; text-align: center">
+      made in brooklyn
+    </p>
+  </div>
+  <div class="clearfix"></div>
+
 </div>
