--- a/app/css/app.css
+++ b/app/css/app.css
@@ -99,6 +99,12 @@ body {
   line-height: 18px;
   text-align: justify;
 }
+.about-footer-text {
+  color: #999;
+}
+.about-footer-text a {
+  color: #4D91B3;
+}
 .about-image {
   border: 2px #111 solid;
   border-radius: 4px;
