Modify about text

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -45,7 +45,7 @@
     </p>
 
     <p class="about-text" style="text-align: center">
-      or send comments and bug reports to <b>usedbookscraper</b> at <b>gmail</b>
+      or send comments to <b>usedbookscraper</b> at <b>gmail</b>
     </p>
 
     <p class="about-text about-footer-text" style="font-size: 11px; text-align: center; margin-top: 32px">
