Modify home and start page copy

--- a/app/bookscrapersession/partials/user.html
+++ b/app/bookscrapersession/partials/user.html
@@ -10,7 +10,8 @@
 <h1>enter goodreads profile url</h1><br>
 
 <p>Copy and paste the URL of your goodreads.com profile to load your reading list.</p>
-<p>Tip: Your goodreads.com account must be public (this is the default).</p>
+<p>(Or try it with the usedbookscraper example account.)</p>
+<p>Tip: Your goodreads.com account must be public.</p>
 <br>
 
 <form class="form-inline" ng-submit="submitGoodreadsProfileUrl(goodreadsProfileUrl)">
