--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -24,13 +24,12 @@
     <b>how it works:</b>
     <ol>
       <li>get your <b>reading list</b> from goodreads.com or enter isbns directly</li>
-      <li>select <b>5 &ndash; 25 books</b> for the search</li>
-      <li>tweak options to prioritize certain books, pick specific editions, and set max price and minimum acceptable book condition</li>
+      <li>select <b>5 &ndash; 25 books</b> for the search and adjust the search options</li>
       <li>usedbookscraper <b>searches
       <a target="_blank" href="http://rover.ebay.com/rover/1/8971-56017-19255-0/1?ff3=5&pub=5575092710&toolid=10001&campid=5337535591">
         half.com</a>
       </b> and shows you results grouped by seller</li>
-      <li><b>buy a stack of books</b> from <b>one seller</b> and get cheap shipping</li>
+      <li><b>buy a stack of books</b> from <b>one seller</b> to get cheap shipping</li>
     </ol>
     <img style="text-decoration:none;border:0;padding:0;margin:0;" src="http://rover.ebay.com/roverimp/1/8971-56017-19255-0/1?ff3=5&pub=5575092710&toolid=10001&campid=5337535591&customid=&mpt=[CACHEBUSTER]">
   </div>
@@ -60,10 +59,6 @@
       <a href="https://www.goodreads.com/api" target="_blank">goodreads api</a> &bull;
       <a href="http://xisbn.worldcat.org/xisbnadmin/doc/api.htm" target="_blank">xisbn api</a> &bull;
       <a href="http://giphy.com" target="_blank">giphy</a>
-    </p>
-
-    <p class="about-text about-footer-text" style="font-size: 11px; text-align: center">
-      made in brooklyn
     </p>
   </div>
   <div class="clearfix"></div>
